--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -45,16 +45,16 @@ jobs:
             with:
               name: webapp
               path: ~/
-          - name: Run SonarQube Analysis
-            run: |
-              mvn sonar:sonar \
-                -Dsonar.host.url=http://54.211.193.235:9000
-          # - name: tomcat aspect 
+          # - name: Run SonarQube Analysis
           #   run: |
-          #     echo ${{ secrets.TOMCAT_KP }} > ~/key.pem
-          #     chmod 400 ~/key.pem
-          # - name: see key in home directory
-          #   run: ls -l ~/
-          # - name: push to tomcat server
-          #   run: sudo scp -i ~/key.pem -o StrictHostKeyChecking=no ~/*.war ec2-user@54.242.145.113:/opt/tomcat9/webapps
+          #     mvn sonar:sonar \
+          #       -Dsonar.host.url=http://54.211.193.235:9000
+          - name: tomcat aspect 
+            run: |
+              echo ${{ secrets.TOMCAT_KP }} > ~/key.pem
+              chmod 400 ~/key.pem
+          - name: see key in home directory
+            run: ls -l ~/
+          - name: push to tomcat server
+            run: sudo scp -i ~/key.pem -o StrictHostKeyChecking=no ~/*.war ec2-user@54.152.77.222:/opt/tomcat9/webapps
           
