--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -51,7 +51,7 @@ jobs:
           #       -Dsonar.host.url=http://54.211.193.235:9000
           - name: tomcat aspect 
             run: |
-              echo ${{ secrets.TOMCAT_KP }} > ~/key.pem
+              echo "${{ secrets.TOMCAT_KP }}" > ~/key.pem
               chmod 400 ~/key.pem
           - name: see key in home directory
             run: ls -l ~/
