--- a/.github/workflows/build-deploy-ec2.yaml
+++ b/.github/workflows/build-deploy-ec2.yaml
@@ -46,12 +46,12 @@ jobs:
                 name: webapp
                 path: ~/
 
-            - name: run sonarqube scan against code
-              run: |
-                mvn sonar:sonar \
-                -Dsonar.projectKey=${{ secrets.PROJECT_KEY }} \
-                -Dsonar.host.url=${{ secrets.HOST_URL }} \
-                -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            # - name: run sonarqube scan against code
+            #   run: |
+            #     mvn sonar:sonar \
+            #     -Dsonar.projectKey=${{ secrets.PROJECT_KEY }} \
+            #     -Dsonar.host.url=${{ secrets.HOST_URL }} \
+            #     -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
             - name: push into tomcat server (EC2 Instance)
               run: |
